--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     >
                 </p>
                 <div class="alt-btn">
-                    <button><a href="C:\Users\MBLENS\Documents\Cyberspy step 2\loading.html">FINI</a></button>
+                    <button><a href="./loading.html">FINI</a></button>
                 </div>
             </section>
         </div>
