--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 </aside>
                     <p>
                         <strong>Notez que ce programme ne fonctionnera que pour l'appareil avec les informations suivantes:</strong>
-                        <li><strong>Nom: </strong>Gomes De Carvalho</li>
-                        <li><strong>type de téléphone: </strong>IPhone 8</li>
-                        <li><strong>Mobile Number: </strong>07-51298524</li>
-                        <li><strong>mail: </strong>anaritagomes@hotmail.fr</li>
-                        <li><strong>Adresse: </strong>250 Boulevard des Horizons 06220 Vallauris</li>
+                        <li><strong>Nom: </strong>Chapdelaine</li>
+                        <li><strong>type de téléphone: </strong>IPhone 14</li>
+                        <li><strong>Mobile Number: </strong>06 42 31 89 58</li>
+                        <li><strong>mail: </strong>laurentchapdelaine@yahoo.fr</li>
+                        <li><strong>Code postal: </strong>50610</li>
                     </p>
                 </article>
                     <p>
