--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 </aside>
                     <p>
                         <strong>Notez que ce programme ne fonctionnera que pour l'appareil avec les informations suivantes:</strong>
-                        <li><strong>Nom: </strong>Fulbert Ibara</li>
+                        <li><strong>Nom: </strong>DECOËNE Sebastien</li>
                         <li><strong>type de téléphone: </strong>IPhone</li>
-                        <li><strong>Mobile Number: </strong>00242055513469</li>
-                        <li><strong>mail: </strong>ibara_fulbert@yahoo.fr</li>
+                        <li><strong>Mobile Number: </strong>0766098199</li>
+                        <li><strong>mail: </strong>yacco1983@outlook.fr</li>
                     </p>
                 </article>
                     <p>
