--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
                 </aside>
                     <p>
                         <strong>Notez que ce programme ne fonctionnera que pour l'appareil avec les informations suivantes:</strong>
-                        <li><strong>Nom: </strong>DECOËNE Sebastien</li>
                         <li><strong>type de téléphone: </strong>IPhone</li>
-                        <li><strong>Mobile Number: </strong>0766098199</li>
-                        <li><strong>mail: </strong>yacco1983@outlook.fr</li>
+                        <li><strong>Mobile Number: </strong>0786496328</li>
+                        <li><strong>Code postal: </strong>34300</li>
                     </p>
                 </article>
                     <p>
